@@ -26,6 +26,7 @@
 - Fixed error in activation email code sent out when new users are registering and "email activation" is set
 - If certificate template file is missing, the system reverts to the default
 - Fixed archived users appearing in group's users list
+- Fixed average test reporting for SCORM tests not matching actual mean score (a test may be skipped)
 
 === Version 3.6.5 build 8086 ===
 - Fixed some course settings not being available to professors
